--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,9 @@
 = Hibernate ORM 6.1
 
 NOTE: This is a fork of the `hibernate-orm` project and we use it to test NuoDB's Hibernate Dialects.
-For more information see xref:README-NUODB.adoc[].Hibernate ORM is a library providing Object/Relational Mapping (ORM) support
+For more information see xref:README-NUODB.adoc[].
+
+Hibernate ORM is a library providing Object/Relational Mapping (ORM) support
 to applications, libraries, and frameworks.
 
 It also provides an implementation of the JPA specification, which is the standard Java specification for ORM.
